--- a/templates/contact.html
+++ b/templates/contact.html
@@ -67,7 +67,7 @@
 	                
 	                <div class="row travel-zap-logo">
 	                	<div class="col-sm-6 black-bg col-xs-8">
-	                		<img src="assets/img/logo2.png" />
+	                		<img src="assets/img/logo2.png" alt="travel zap logo"/>
 	                	</div><!-- .col-xs-6 -->
 	                </div><!-- .row -->
 	                
@@ -83,7 +83,7 @@
         			</div>
 	                	
 	                	<div class="col-sm-6 col-xs-8 text-center">
-	                		<img src="assets/img/guarantee.png" />
+	                		<img src="assets/img/guarantee.png" alt="price match guarantee"/>
 	                	</div><!-- .col-xs-6 -->
 	                </div><!-- .row -->
             </div><!-- end contact-agent-message -->
