--- a/templates/landing.html
+++ b/templates/landing.html
@@ -66,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 sample-info-pic col-sm-push-6">
-                <img src="assets/img/{hotel_c}1.jpg"/>
+                <img src="assets/img/{hotel_c}1.jpg" alt="hotel picture"/>
             </div><!-- end sampl-info-pic -->
             
             <div class="col-sm-6 sample-info-text col-sm-pull-6">
