--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,7 @@
 <!-- ========== CONTACT PAGE ========== -->
 <!-- Contact Form Processing -->  
 <script src="js/contact.js"></script>
+<script src="js/placeholder.js"></script>
 <section id="contact">
     <div class="container">
         <div class="row div-nav-space match-my-cols">
