--- a/style/main.css
+++ b/style/main.css
@@ -469,6 +469,12 @@ header {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+#loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("preloader.gif") no-repeat center center; }
+
 img {
   width: 100%; }
 
