--- a/style/main.scss
+++ b/style/main.scss
@@ -34,6 +34,13 @@
   box-sizing: border-box;
 }
 
+#loading {
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+    background: url('preloader.gif') no-repeat center center;
+}
+
 img {
     width: 100%;
 }
