--- a/style/main.css
+++ b/style/main.css
@@ -853,7 +853,8 @@ footer a {
   padding: 3px 7px 0; }
 
 .learn-more {
-  text-decoration: underline; }
+  text-decoration: underline;
+  padding: 0 11px 0 10px; }
 
 #price-match-content-sm {
   padding: 5px 10px 0;
