--- a/style/main.scss
+++ b/style/main.scss
@@ -745,6 +745,10 @@ iframe {
     }
 }
 
+.space {
+    margin-top: 20px;
+}
+
 .ion-arrow-up-c {
     color: white;
     font-size: 20px;
@@ -771,6 +775,9 @@ iframe {
   vertical-align: top;
   text-align: left;
   padding-top: 15px;
+  -webkit-box-shadow: -1px 13px 46px -26px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 13px 46px -26px rgba(0,0,0,0.75);
+    box-shadow: -1px 13px 46px -26px rgba(0,0,0,0.75);
 }
 
 .pthumbnail {
