--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,6 @@
 <!-- ========== CONTACT PAGE ========== -->
 <!-- Contact Form Processing -->  
 <script src="js/contact.js"></script>
-<script src="js/placeholder.js"></script>
 <section id="contact">
     <div class="container">
         <div class="row div-nav-space match-my-cols">
@@ -68,7 +67,7 @@
 	                
 	                <div class="row travel-zap-logo">
 	                	<div class="col-sm-6 black-bg col-xs-8">
-	                		<img src="assets/img/logo2.png" alt="travel zap logo"/>
+	                		<img src="assets/img/logo2.png" />
 	                	</div><!-- .col-xs-6 -->
 	                </div><!-- .row -->
 	                
@@ -80,11 +79,14 @@
         			
 	        			<div style="display: {discountCss}">
 	        				 <p><span class="gold">$150 off</span> for your next group vacation. Discount code #{discount_code}. </br> Please reach out to us <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a></p>
+
+
+
 	        			</div>
         			</div>
 	                	
 	                	<div class="col-sm-6 col-xs-8 text-center">
-	                		<img src="assets/img/guarantee.png" alt="price match guarantee"/>
+	                		<img src="assets/img/guarantee.png" />
 	                	</div><!-- .col-xs-6 -->
 	                </div><!-- .row -->
             </div><!-- end contact-agent-message -->
