--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -40,7 +40,7 @@
 
 <!-- STORY LINE ====================================== -->
 <section id="couple-story" class="container-space text-center" style="display:{about_usCSS};">
-    <h1>our story</h1>
+    <h1>{story_section_title}</h1>
     <div class="container">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -94,6 +94,7 @@
             <!-- bridesmaids1 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid1}">
+
                     <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/b1.jpg" alt="maids-grooms-pic">
@@ -104,6 +105,7 @@
                         <p>{bridesmaid1_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
+
             </div>  <!-- .col-sm-6 -->
             
             <!-- groomsman1 column ------------------ -->
@@ -126,6 +128,7 @@
             <!-- bridesmaids2 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid2}">
+
                     <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/b2.jpg" alt="maids-grooms-pic">
@@ -136,6 +139,7 @@
                         <p>{bridesmaid2_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
+
             </div>  <!-- .col-sm-6 -->
             
             <!-- groomsman2 column ------------------ -->
@@ -158,6 +162,7 @@
             <!-- bridesmaids3 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid3}">
+
                     <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/b3.jpg" alt="maids-grooms-pic">
@@ -168,6 +173,7 @@
                         <p>{bridesmaid3_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
+
             </div>  <!-- .col-sm-6 -->
             
             <!-- groomsman3 column ------------------ -->
@@ -190,6 +196,7 @@
             <!-- bridesmaids4 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid4}">
+
                     <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/b4.jpg" alt="maids-grooms-pic">
@@ -200,6 +207,7 @@
                         <p>{bridesmaid4_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
+
             </div>  <!-- .col-sm-6 -->
             
             <!-- groomsman4 column ------------------ -->
@@ -222,6 +230,7 @@
             <!-- bridesmaids5 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid5}">
+
                     <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/b5.jpg" alt="maids-grooms-pic">
@@ -236,6 +245,46 @@
             
             <!-- groomsman5 column ------------------ -->
             <div class="col-md-6">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="row row-space" style="display: {groomsman5}">
                     <div class="col-sm-5">
                         <div class="jthumbnail">
@@ -247,6 +296,7 @@
                         <p>{groomsman5_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
+
             </div><!-- .col-sm-6 -->
         </div><!-- .row -->
     </div><!-- .container -->
@@ -264,6 +314,5 @@
     </div><!-- .container -->
 </section><!-- #instagram-->
 </div>
-
 <!-- application scripts -->
 <script type="text/javascript" src="js/wedding.js"></script>
