--- a/templates/destination.html
+++ b/templates/destination.html
@@ -293,7 +293,7 @@
             <div class="col-sm-4 booking-well jcol-centered" style="{depositCss}">
                 <span class="booking-number">2. Deposit</span>
                 </br></br>
-                <p class="para-bottom">Submit your ${deposits_person} deposit Per Person.</p>
+                <p class="para-bottom">Submit your {deposits_person} deposit Per Person.</p>
                 <a href="https://travelzap.com/payments/?r={booking_number}" target="_blank"><button>Deposit</button></a>
             </div>
 
